<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="windowModality">
   <enum>Qt::ApplicationModal</enum>
  </property>
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>990</width>
    <height>450</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>450</width>
    <height>250</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>MystiQ Media Converter</string>
  </property>
  <property name="windowIcon">
   <iconset resource="../images.qrc">
    <normaloff>:/app/icons/mystiq.svg</normaloff>:/app/icons/mystiq.svg</iconset>
  </property>
  <property name="autoFillBackground">
   <bool>true</bool>
  </property>
  <property name="styleSheet">
   <string notr="true"/>
  </property>
  <property name="iconSize">
   <size>
    <width>22</width>
    <height>22</height>
   </size>
  </property>
  <property name="toolButtonStyle">
   <enum>Qt::ToolButtonTextUnderIcon</enum>
  </property>
  <property name="animated">
   <bool>false</bool>
  </property>
  <property name="documentMode">
   <bool>false</bool>
  </property>
  <property name="dockNestingEnabled">
   <bool>false</bool>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QGridLayout" name="gridLayout_3">
    <property name="leftMargin">
     <number>1</number>
    </property>
    <property name="topMargin">
     <number>1</number>
    </property>
    <property name="rightMargin">
     <number>1</number>
    </property>
    <property name="bottomMargin">
     <number>0</number>
    </property>
    <property name="spacing">
     <number>0</number>
    </property>
    <item row="0" column="0" colspan="2">
     <layout class="QVBoxLayout" name="layoutListPlaceholder">
      <property name="spacing">
       <number>0</number>
      </property>
      <property name="sizeConstraint">
       <enum>QLayout::SetMaximumSize</enum>
      </property>
      <property name="leftMargin">
       <number>0</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>0</number>
      </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>990</width>
     <height>22</height>
    </rect>
   </property>
   <property name="nativeMenuBar">
    <bool>true</bool>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>&amp;File</string>
    </property>
    <addaction name="actionAddFiles"/>
    <addaction name="actionOptions"/>
    <addaction name="separator"/>
    <addaction name="actionExit"/>
   </widget>
   <widget class="QMenu" name="menuConvert">
    <property name="title">
     <string>&amp;Convert</string>
    </property>
    <addaction name="actionStartConversion"/>
    <addaction name="actionStopConversion"/>
    <addaction name="actionRetry"/>
    <addaction name="actionRetryAll"/>
    <addaction name="separator"/>
    <addaction name="actionPoweroff"/>
   </widget>
   <widget class="QMenu" name="menuAbout">
    <property name="title">
     <string>&amp;Help</string>
    </property>
    <addaction name="actionHelpMystiQDialog"/>
    <addaction name="separator"/>
    <addaction name="actionReport"/>
    <addaction name="actionCheckUpdate"/>
    <addaction name="separator"/>
    <addaction name="actionAbout"/>
    <addaction name="actionAboutFFmpeg"/>
    <addaction name="actionAboutQt"/>
    <addaction name="separator"/>
    <addaction name="actionTranslate"/>
    <addaction name="actionDonate"/>
   </widget>
   <widget class="QMenu" name="menuEdit">
    <property name="title">
     <string>&amp;Edit</string>
    </property>
    <addaction name="actionRemoveSelectedItems"/>
    <addaction name="actionRemoveCompletedItems"/>
    <addaction name="actionClearList"/>
    <addaction name="separator"/>
    <addaction name="actionOpenOutputFolder"/>
    <addaction name="actionSetParameters"/>
    <addaction name="actionChangeOutputFilename"/>
    <addaction name="actionChangeOutputDirectory"/>
    <addaction name="actionShowErrorMessage"/>
    <addaction name="actionCut"/>
    <addaction name="separator"/>
    <addaction name="actionOpenSettingFolder"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuEdit"/>
   <addaction name="menuConvert"/>
   <addaction name="menuAbout"/>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <widget class="QToolBar" name="toolBar">
   <property name="contextMenuPolicy">
    <enum>Qt::DefaultContextMenu</enum>
   </property>
   <property name="windowTitle">
    <string notr="true">MystiQ</string>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
   </property>
   <property name="inputMethodHints">
    <set>Qt::ImhNone</set>
   </property>
   <property name="movable">
    <bool>false</bool>
   </property>
   <property name="allowedAreas">
    <set>Qt::LeftToolBarArea</set>
   </property>
   <property name="iconSize">
    <size>
     <width>25</width>
     <height>25</height>
    </size>
   </property>
   <property name="toolButtonStyle">
    <enum>Qt::ToolButtonIconOnly</enum>
   </property>
   <property name="floatable">
    <bool>true</bool>
   </property>
   <attribute name="toolBarArea">
    <enum>LeftToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
  </widget>
  <action name="actionAddFiles">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/add.svg</normaloff>:/actions/icons/add.svg</iconset>
   </property>
   <property name="text">
    <string>&amp;Add Files</string>
   </property>
   <property name="statusTip">
    <string>Add files for conversion.</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+N</string>
   </property>
   <property name="autoRepeat">
    <bool>false</bool>
   </property>
   <property name="visible">
    <bool>true</bool>
   </property>
   <property name="shortcutVisibleInContextMenu">
    <bool>false</bool>
   </property>
  </action>
  <action name="actionExit">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/exit.svg</normaloff>:/actions/icons/exit.svg</iconset>
   </property>
   <property name="text">
    <string>E&amp;xit</string>
   </property>
   <property name="statusTip">
    <string>Exit the program.</string>
   </property>
  </action>
  <action name="actionStartConversion">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/convert.svg</normaloff>:/actions/icons/convert.svg</iconset>
   </property>
   <property name="text">
    <string>&amp;Convert</string>
   </property>
   <property name="statusTip">
    <string>Start conversion process.</string>
   </property>
   <property name="shortcut">
    <string>F5</string>
   </property>
  </action>
  <action name="actionStopConversion">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/stop.svg</normaloff>:/actions/icons/stop.svg</iconset>
   </property>
   <property name="text">
    <string>S&amp;top</string>
   </property>
   <property name="statusTip">
    <string>Stop conversion process.</string>
   </property>
  </action>
  <action name="actionSetParameters">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/settings.svg</normaloff>:/actions/icons/settings.svg</iconset>
   </property>
   <property name="text">
    <string>Set &amp;Parameters</string>
   </property>
   <property name="iconText">
    <string extracomment="Edit output file parameters.">Set Parameters</string>
   </property>
   <property name="statusTip">
    <string>Edit conversion parameters of selected files.</string>
   </property>
  </action>
  <action name="actionAboutQt">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/qt.svg</normaloff>:/actions/icons/qt.svg</iconset>
   </property>
   <property name="text">
    <string>&amp;Qt</string>
   </property>
   <property name="statusTip">
    <string>About Qt</string>
   </property>
  </action>
  <action name="actionOpenOutputFolder">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/open_folder.svg</normaloff>:/actions/icons/open_folder.svg</iconset>
   </property>
   <property name="text">
    <string>&amp;Open Output Folder</string>
   </property>
   <property name="statusTip">
    <string>Open output folder of the selected file.</string>
   </property>
  </action>
  <action name="actionAboutFFmpeg">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/FFmpeg_icon.svg</normaloff>:/actions/icons/FFmpeg_icon.svg</iconset>
   </property>
   <property name="text">
    <string>&amp;FFmpeg</string>
   </property>
   <property name="statusTip">
    <string>About FFmpeg</string>
   </property>
  </action>
  <action name="actionRemoveSelectedItems">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/remove.svg</normaloff>:/actions/icons/remove.svg</iconset>
   </property>
   <property name="text">
    <string extracomment="remove selected (tasks, items)">&amp;Remove Selected</string>
   </property>
   <property name="statusTip">
    <string>Remove all selected items in the list.</string>
   </property>
  </action>
  <action name="actionRemoveCompletedItems">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/remove_completed.svg</normaloff>:/actions/icons/remove_completed.svg</iconset>
   </property>
   <property name="text">
    <string extracomment="remove completed (task, items)">R&amp;emove Completed</string>
   </property>
   <property name="toolTip">
    <string>Remove Completed Items</string>
   </property>
   <property name="statusTip">
    <string>Remove all completed items in the list.</string>
   </property>
  </action>
  <action name="actionClearList">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/clear.svg</normaloff>:/actions/icons/clear.svg</iconset>
   </property>
   <property name="text">
    <string>Clear &amp;List</string>
   </property>
   <property name="toolTip">
    <string>Clear List</string>
   </property>
   <property name="statusTip">
    <string>Remove all items in the list.</string>
   </property>
  </action>
  <action name="actionRetry">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/retry.svg</normaloff>:/actions/icons/retry.svg</iconset>
   </property>
   <property name="text">
    <string>&amp;Retry</string>
   </property>
   <property name="toolTip">
    <string>Retry</string>
   </property>
   <property name="statusTip">
    <string>Retry selected tasks.</string>
   </property>
  </action>
  <action name="actionRetryAll">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/retry_all.svg</normaloff>:/actions/icons/retry_all.svg</iconset>
   </property>
   <property name="text">
    <string>Retry &amp;All</string>
   </property>
   <property name="statusTip">
    <string>Retry all tasks.</string>
   </property>
   <property name="shortcut">
    <string/>
   </property>
  </action>
  <action name="actionOptions">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/settings.svg</normaloff>:/actions/icons/settings.svg</iconset>
   </property>
   <property name="text">
    <string>&amp;Options</string>
   </property>
   <property name="statusTip">
    <string>Options</string>
   </property>
  </action>
  <action name="actionAbout">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/about.svg</normaloff>:/actions/icons/about.svg</iconset>
   </property>
   <property name="text">
    <string>About MystiQ</string>
   </property>
   <property name="statusTip">
    <string>About This Program</string>
   </property>
  </action>
  <action name="actionChangeOutputFilename">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/edit_file_name.svg</normaloff>:/actions/icons/edit_file_name.svg</iconset>
   </property>
   <property name="text">
    <string>Change Output &amp;Filename</string>
   </property>
   <property name="statusTip">
    <string>Change the output filename of the selected item.</string>
   </property>
  </action>
  <action name="actionChangeOutputDirectory">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/edit_folder_name.svg</normaloff>:/actions/icons/edit_folder_name.svg</iconset>
   </property>
   <property name="text">
    <string>Change Output &amp;Directory</string>
   </property>
   <property name="statusTip">
    <string>Change the output directory of the selected items.</string>
   </property>
  </action>
  <action name="actionPoweroff">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/system_poweroff.svg</normaloff>:/actions/icons/system_poweroff.svg</iconset>
   </property>
   <property name="text">
    <string>Poweroff</string>
   </property>
   <property name="shortcut">
    <string/>
   </property>
  </action>
  <action name="actionShowErrorMessage">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/error.svg</normaloff>:/actions/icons/error.svg</iconset>
   </property>
   <property name="text">
    <string>Show Error &amp;Message</string>
   </property>
  </action>
  <action name="actionCheckUpdate">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/check_update.svg</normaloff>:/actions/icons/check_update.svg</iconset>
   </property>
   <property name="text">
    <string>Check For &amp;Updates</string>
   </property>
  </action>
  <action name="actionCut">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/cut.svg</normaloff>:/actions/icons/cut.svg</iconset>
   </property>
   <property name="text">
    <string extracomment="Cut video file (select a time range to convert)">Cut</string>
   </property>
  </action>
  <action name="actionHelpMystiQDialog">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/user-manual.svg</normaloff>:/actions/icons/user-manual.svg</iconset>
   </property>
   <property name="text">
    <string>User Manual</string>
   </property>
   <property name="iconText">
    <string>User Manual</string>
   </property>
   <property name="toolTip">
    <string>User Manual</string>
   </property>
   <property name="statusTip">
    <string>User Manual</string>
   </property>
   <property name="shortcut">
    <string>F1</string>
   </property>
   <property name="iconVisibleInMenu">
    <bool>true</bool>
   </property>
  </action>
  <action name="actionReport">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/error.svg</normaloff>:/actions/icons/error.svg</iconset>
   </property>
   <property name="text">
    <string>&amp;Report Error</string>
   </property>
   <property name="toolTip">
    <string>Report Error</string>
   </property>
   <property name="statusTip">
    <string>Report Error</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+E</string>
   </property>
  </action>
  <action name="actionDonate">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/donate.svg</normaloff>:/actions/icons/donate.svg</iconset>
   </property>
   <property name="text">
    <string>Donate</string>
   </property>
  </action>
  <action name="actionTranslate">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/translate.svg</normaloff>:/actions/icons/translate.svg</iconset>
   </property>
   <property name="text">
    <string>Translate Application</string>
   </property>
   <property name="toolTip">
    <string>Translate</string>
   </property>
  </action>
  <action name="actionOpenSettingFolder">
   <property name="icon">
    <iconset resource="../images.qrc">
     <normaloff>:/actions/icons/settings_folder.svg</normaloff>:/actions/icons/settings_folder.svg</iconset>
   </property>
   <property name="text">
    <string>Open Setting Folder</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="../images.qrc"/>
 </resources>
 <connections/>
</ui>
